src/objects/c2g__PaymentDetailsTemplate__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppaymentdetailstemplate</customHelpPage>
    <description>Stores template details from the Payments Plus process.</description>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesCWODimension1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesCWODimension2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesCWODimension3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesCWOGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMediaTypes__c</fullName>
        <label>Payment Media</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesSDDimension1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesSDDimension2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesSDDimension3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesSDGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Details Template</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__Default__c</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__PaymentMediaTypes__c</columns>
        <columns>c2g__PaymentCurrency__c</columns>
        <columns>c2g__SettlementDiscountGLA__c</columns>
        <columns>c2g__CurrencyWriteOffGLA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Details Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Details Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>